fix lap function, add a current lap timer, minor tweaks and comments for better readability

--- a/styles/StopWatchButton.css
+++ b/styles/StopWatchButton.css
@@ -1,6 +1,7 @@
 
 .start{
     background-color: #4c9a2a;
+    cursor:pointer;
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
@@ -8,6 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     transition: all 0.3s ease; /*transition animation when change of state in DOM*/
     
 }
@@ -24,7 +26,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    transition: all 0.3s ease
+    align-items: center;
+    transition: all 0.3s ease;
+    cursor:pointer;
 
 }
 
@@ -40,6 +44,8 @@
     margin: 10px;
     transition: all 0.3s ease;
     color: white;
+    cursor:pointer;
+
 
 
 
@@ -56,6 +62,8 @@
     align-items: center;
     margin: 10px;
     color: white;
+    cursor:pointer;
+
 
 }
 
